src/styles/live.scss
@import './constants';

.live {
  .header {
    .wires {
      background-image: url('../images/wires_live.png');
      background-position: bottom;

      .tv {
        .content {
          column-gap: 50px;
          flex-flow: row;

          .container {
            align-items: flex-start;

            h1 {
              font-size: 2.2em;
            }

            .countdown {
              column-gap: 15px;
              display: flex;
              margin: 20px 0;

              .time {
                width: 40px;

                h2 {
                  font-size: 2.2em;
                }

              }

              .separator {
                margin-top: 5px;
              }
            }
          }
          
          .timer-and-pin {
            height: 150px;
            position: relative;
            width: 120px;
          }

          .timer,
          .pin {
            background-position: center;
            background-repeat: no-repeat;
            background-size: contain;
            height: 100%;
            position: absolute;
            width: 100%;
          }
          
          .timer {
            background-image: url('../images//timer.png');
          }

          .pin {
            $random-num: random(60);
            animation: rotate 60s infinite steps(60);
            animation-delay: -$random-num + s;
            background-image: url('../images//timer_pin.png');
            transform-origin: 50% 55.5%;
          }
        }
      }
    }

    @media only screen and (max-width: 840px) {
      .wires {
        .tv {
          .content {
            column-gap: 30px;

            .container {
              h1 {
                font-size: 1.7em;
              }

              .countdown {
                margin: 20px 0 10px;

                .time {
                  h2 {
                    font-size: 1.7em;
                  }

                  p {
                    font-size: 0.9em;
                  }
                }
              }
            }

            .timer-and-pin {
              height: 130px;
              width: 100px;
            }
          }
        }
      }
    }

    @media only screen and (max-width: 570px) {
      .wires {
        .tv {
          .content {
            column-gap: 10px;

            .container {
              h1 {
                font-size: 1.2em;
              }

              .countdown {
                column-gap: 3px;
                margin: 12px 0 8px;

                .time {
                  h2 {
                    font-size: 1.2em;
                  }

                  p {
                    font-size: 0.6em;
                  }
                }
              }
            }

            .timer-and-pin {
              height: 100px;
              width: 75px;
            }
          }
        }
      }
    }
  }

  .cta {
    .step {
      column-gap: 10px;
      display: flex;
      margin-bottom: 18px;
      max-width: 500px;
      text-align: left;

      .discord {
        color: $red;

        span {
          color: $black;
          text-decoration: line-through;
        }
      }

      a {
        color: $cyan;
        font-size: 1em;

        &:hover {
          text-decoration: underline;
        }
      }

      &:last-child {
        margin-bottom: 0;
      }

      h2 {
        background: unset;
        background-clip: unset;
        color: $black;
        margin: 0;
        min-width: 20px;
        -webkit-text-fill-color: unset;
  
      }
    }
  }

  .live-stream {
    max-width: $content-max-width;
    width: $content-width;

    iframe {
      $aspect-ratio: 0.5625;
      height: calc(#{$content-width} * 0.5625);
      max-height: calc(#{$content-max-width} * #{$aspect-ratio});
      max-width: $content-max-width;
      width: $content-width;
    }
  }

  .schedule {
    display: block;

    h2 {
      margin-bottom: 0;
    }

    .container {
      column-gap: 30px;
      display: flex;
      flex-flow: column;
      flex-wrap: wrap;
      margin-top: 0;
      padding-left: 0;

      h3 {
        font-style: italic;
        margin-bottom: 5px;
        margin-top: 25px;
      }

      .item {
        &.completed {
          text-decoration: line-through;
        }
        
        &.ongoing {
          animation: text-pulse 0.5s infinite alternate ease-out;
          color: $cyan;
        }

        .text {
          p {
            strong {
              width: 550px;
            }
          }
        }
      }
    }

    .note {
      color: rgba($black, 0.75);
      float: right;
      font-size: 0.8em;
      margin-top: 20px;
    }

    @media only screen and (max-width: 570px) {
      .container {
        h3 {
          font-size: 0.825em;
          margin-top: 15px;
        }
      }
    }
  }
}

@keyframes rotate {
  100% {
    transform: rotateZ(360deg);
  }
}

@keyframes text-pulse {
  100% {
    transform: translateX(5px);
  }
}

